<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFoodDetailActivity">

    <TextView
        android:id="@+id/labelFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_food_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/EnterFoodName"
        app:layout_constraintEnd_toStartOf="@+id/EnterFoodName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EnterFoodName" />

    <EditText
        android:id="@+id/EnterFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="14"
        android:hint="@string/hint_food_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toEndOf="@id/labelFoodName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelFoodCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_food_cals"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/EnterFoodCalories"
        app:layout_constraintEnd_toEndOf="@id/labelFoodName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EnterFoodCalories"
        app:layout_constraintVertical_bias="0.333"
        app:layout_goneMarginLeft="16dp" />

    <EditText
        android:id="@+id/EnterFoodCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/hint_food_cals"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/EnterFoodName"
        app:layout_constraintTop_toBottomOf="@+id/EnterFoodName" />

    <TextView
        android:id="@+id/labelFoodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_food_price"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/EnterFoodPrice"
        app:layout_constraintEnd_toEndOf="@+id/labelFoodCalories"
        app:layout_constraintTop_toTopOf="@+id/EnterFoodPrice" />

    <EditText
        android:id="@+id/EnterFoodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/hint_food_price"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/EnterFoodCalories"
        app:layout_constraintStart_toStartOf="@+id/EnterFoodCalories"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/addFoodButtonDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EnterFoodPrice" />







</androidx.constraintlayout.widget.ConstraintLayout>